--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "firebase": "^9.6.11",
+    "@popperjs/core": "2.10.2",
+    "@reduxjs/toolkit": "1.8.1",
+    "bootstrap": "5.1.3",
+    "firebase": "9.6.11",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
-  }
+    "react-dom": "18.0.0",
+    "react-redux": "8.0.1"
+  },
+  "devDependencies": {}
 }
